fix panel projects dispaly spacing on mobile and edit transparency

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -32,16 +32,13 @@
   background-image: linear-gradient(to bottom, #f2f2f2 0, #f2f2f2 100%) !important;
 }
 
-.panel-padding {
-  padding: 20px;
-}
-
 .make-transparent {
-  background-color: rgba(204, 204, 204, 0.2);
+  background-color: rgba(255, 255, 255, 0.83);
 }
 
 .centerBlock {
   margin: auto;
+  padding: 0;
 }
 
 .center-me {
@@ -52,6 +49,13 @@
   max-width:100%;
   max-height:100%;
   vertical-align: middle;
+}
+
+.description-text {
+  padding: 0 20px;
+  font-size: 1.4em;
+  font-weight: 300;
+  font-family: sans-serif;
 }
 
 .hide-overflow {
